<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pirumov.famousriffs.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riffBtn1"
        android:id="@+id/but1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="27dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riffBtn3"
        android:id="@+id/but3"
        android:layout_alignTop="@+id/but1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riffBtn5"
        android:id="@+id/but5"
        android:layout_alignTop="@+id/but3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="42dp"
        android:layout_marginEnd="42dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riffBtn2"
        android:id="@+id/but2"
        android:layout_below="@+id/but1"
        android:layout_alignRight="@+id/but1"
        android:layout_alignEnd="@+id/but1"
        android:layout_marginTop="34dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riffBtn4"
        android:id="@+id/but4"
        android:layout_alignTop="@+id/but2"
        android:layout_alignLeft="@+id/but3"
        android:layout_alignStart="@+id/but3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riffBtn6"
        android:id="@+id/but6"
        android:layout_alignTop="@+id/but4"
        android:layout_alignRight="@+id/but5"
        android:layout_alignEnd="@+id/but5" />
</RelativeLayout>
